1. JaCoCo. Процент покрытия тестами [#31726 #344603]